<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:background="@color/black"
            tools:ignore="RtlSymmetry"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people_resume"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:background="@color/black"
            tools:ignore="RtlSymmetry"
            android:layout_marginStart="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:id="@+id/people_resume_image"
                android:contentDescription="@string/todo"
                android:src="@drawable/photo5"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/people_resume_name"
                android:layout_gravity="center"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="25sp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="40dp"
            android:orientation="vertical"
            tools:ignore="MissingPrefix,RtlSymmetry"
            android:layout_marginStart="20dp"
            android:paddingStart="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/man"
                    android:drawableStart="@drawable/man" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/people_resume_gender"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/man"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/department"
                    android:drawableStart="@drawable/department" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/people_resume_department"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/design"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="学历: "
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/position"
                    android:drawableStart="@drawable/position" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/people_resume_degree"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="本科"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/age"
                    android:drawableStart="@drawable/age" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/people_resume_age"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/ageNumber"

                    />
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="40dp"
            android:orientation="horizontal"
            android:paddingStart="40dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="18sp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/phone"
                android:drawableStart="@drawable/phone" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/people_resume_phone"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/phoneNumber" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="40dp"
            android:orientation="horizontal"
            android:paddingStart="40dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/email"
                android:drawableStart="@drawable/email" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/people_resume_email"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/emailNumber" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="40dp"
            android:orientation="horizontal"
            android:paddingStart="40dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="18sp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/id"
                android:drawableStart="@drawable/id" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/people_resume_id"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/idNumber" />
        </LinearLayout>
        <TextView
            android:textColor="@color/black"
            android:id="@+id/data_start_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="培训考核视频"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/transparent"
            />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingLeft="95dp"-->
<!--            android:drawableLeft="@drawable/evaluate"-->
<!--            android:text="@string/work_evaluate"-->
<!--            android:textColor="@color/black"-->
<!--            android:gravity="center"-->
<!--            android:textSize="30sp"-->
<!--            android:drawableStart="@drawable/evaluate"-->
<!--            android:paddingStart="95dp"-->
<!--            tools:ignore="RtlSymmetry" />-->

    </LinearLayout>

</LinearLayout>